--- a/Menu/NewsHub.html
+++ b/Menu/NewsHub.html
@@ -1,7 +1,10 @@
-<!-- V4.00-0/0 -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
 </head>
+<body>
+ 
 <div class="backleft">
 <div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
 </div>
@@ -29,6 +32,9 @@ questions or comments? please email us at: <a href="mailto:Bsa-223@protonmail.co
 </h6>
   <hr>
 
+</Body>
+</html>
+ 
 <style>
 
 .UlListLeft{
