--- a/Menu/UpdateLog.html
+++ b/Menu/UpdateLog.html
@@ -1,7 +1,41 @@
-<!-- V3.00-0/0 -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
+ <style>
+
+.flexbox-CONTACT {
+
+  min-height: 200px;
+  
+}
+.Center {
+
+text-align: center;
+
+}
+  
+.backlink {
+
+font-size: 20px; 
+ 
+}
+.backleft {
+
+text-align: left;
+
+}
+.mainleft {
+
+text-align: left;
+	
+}
+</style>
+
+<title>Update Log</title>
 </head>
+<body>
+	
 <div class="backleft">
 <div class="backlink"><a href="https://troop223.github.io"><< Back</a></div>
 </div>
@@ -63,38 +97,7 @@ Or call:  423-355-4430
  <!-- NOTE: These Div closers are VERY necessary DO NOT delete -->
   </div>
   </div>
-<style>
 
-.flexbox-CONTACT {
-
-  min-height: 200px;
-  
-}
-.Center {
-
-text-align: center;
-
-}
-  
-body {
-
-padding: 42px 143px 42px 143px;
-text-align: center;
-
-}
-.backlink {
-
-font-size: 20px; 
- 
-}
-.backleft {
-
-text-align: left;
-
-}
-.mainleft {
-
-text-align: left;
+</Body>
+</html>
 	
-}
-</style>
