--- a/Menu/NewsHub.html
+++ b/Menu/NewsHub.html
@@ -2,6 +2,28 @@
 <html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
+ <style>
+
+.UlListLeft{
+
+text-align: left;
+    
+  }
+
+.backlink {
+
+font-size: 20px; 
+ 
+}
+.backleft {
+
+text-align: left;
+
+}
+
+</style>
+ 
+<title>News</title>
 </head>
 <body>
  
@@ -35,31 +57,3 @@ questions or comments? please email us at: <a href="mailto:Bsa-223@protonmail.co
 </Body>
 </html>
  
-<style>
-
-.UlListLeft{
-
-text-align: left;
-    
-  }
-
- body {
-
-padding: 42px 143px 42px 143px;
-text-align: center;
-
-}
-.backlink {
-
-font-size: 20px; 
- 
-}
-.backleft {
-
-text-align: left;
-
-}
-
-
-
-</style>
