--- a/Menu/ABOUT.html
+++ b/Menu/ABOUT.html
@@ -3,6 +3,20 @@
 <html lang="en">
 <head>
  <link rel="stylesheet" href="Styles.css">
+ <style>
+
+.backlink {
+
+font-size: 20px; 
+ 
+}
+.backleft {
+
+text-align: left;
+
+}
+
+</style>
  <title>Troop 223 About</title
 </head>
 <body>
