--- a/index.html
+++ b/index.html
@@ -1,5 +1,177 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>BSA Troop 223</title>
+	<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
 
+body {
+
+text-align: center;
+margin: 0;
+font-family: Arial, Helvetica, sans-serif;
+padding-left: 30%
+padding-right: 30%
+font-family: "Lato", sans-serif;
+}
+
+comments{
+
+text-align: center;
+	
+}
+
+.UlLeft {
+
+text-align: left;
+  
+}
+  
+
+
+  .ImageLeft {
+
+  text-align: left;
+    
+  }
+
+
+
+.topnav {
+  overflow: hidden;
+  /*turns the background color on News, Contact, and about a color*/
+  background-color: #998887;
+  
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+/* changes what color the background, text color when you hover over it*/
+  background-color: darkgrey;
+  color: white;
+}
+
+.topnav a.active {
+/*changes the color of the 'Home' background, text color, respectivly*/
+  background-color: #5e5453;
+  color: white;
+}
+
+  .flexbox-item{
+
+ width: 100%;
+ background-color: #2b2b2e;
+ margin: 0%;
+  }
+
+.flexbox-CONTACT {
+
+  min-height: 500px;
+  
+}
+.overitem {
+
+width: 100%;
+background-color: #2b2b2e;
+margin: 0%;
+}	
+.overCONTACT {
+
+  min-height: 60px;
+	
+}
+	
+  .ContactCOLOR{
+  
+  color: grey;
+  
+  }
+  
+  .ContactCOLOR a {
+  
+  color: #4697e3;
+  
+  }
+
+.responsiveIMGlarge {
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  max-height: 600px;
+}
+
+.responsiveIMGsmall {
+
+width: auto;
+height: auto;
+	
+}	
+.ContInfo {
+
+padding-top: 50px;
+
+}
+
+.Cmnt {float: left;}
+
+.SpecifCenter {text-align: center;}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+	
+</style>
+</head>
+<body>
  <!-- V10.01-0/0 -->
  <!-- NOTE: All DIVs and thier closing tags are VERY necessary DO NOT delete -->
 
@@ -20,8 +192,8 @@
 <div class="UlLeft">
  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu </span>
 </div>
-<title>BSA Troop 223</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   	<div class="flexboxMain">	
 
 <!-- NOTE:	'SpecifCenter' uses the 'float' CSS property and is used as a div next to another div	-->
@@ -253,175 +425,8 @@ Or call:  423-355-4430
   </div>
 </div>
 </div>
-<style>
-
-body {
-
-text-align: center;
-margin: 0;
-font-family: Arial, Helvetica, sans-serif;
-padding-left: 30%
-padding-right: 30%
-font-family: "Lato", sans-serif;
-}
-
-comments{
-
-text-align: center;
-	
-}
-
-.UlLeft {
-
-text-align: left;
-  
-}
-  
-
-
-  .ImageLeft {
-
-  text-align: left;
-    
-  }
-
-
-
-.topnav {
-  overflow: hidden;
-  /*turns the background color on News, Contact, and about a color*/
-  background-color: #998887;
-  
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-/* changes what color the background, text color when you hover over it*/
-  background-color: darkgrey;
-  color: white;
-}
-
-.topnav a.active {
-/*changes the color of the 'Home' background, text color, respectivly*/
-  background-color: #5e5453;
-  color: white;
-}
-
-  .flexbox-item{
-
- width: 100%;
- background-color: #2b2b2e;
- margin: 0%;
-  }
-
-.flexbox-CONTACT {
-
-  min-height: 500px;
-  
-}
-.overitem {
-
-width: 100%;
-background-color: #2b2b2e;
-margin: 0%;
-}	
-.overCONTACT {
-
-  min-height: 60px;
-	
-}
-	
-  .ContactCOLOR{
-  
-  color: grey;
-  
-  }
-  
-  .ContactCOLOR a {
-  
-  color: #4697e3;
-  
-  }
-
-.responsiveIMGlarge {
-  width: 100%;
-  max-width: 1000px;
-  height: 100%;
-  max-height: 600px;
-}
-
-.responsiveIMGsmall {
-
-width: auto;
-height: auto;
-	
-}	
-.ContInfo {
-
-padding-top: 50px;
-
-}
-
-.Cmnt {float: left;}
-
-.SpecifCenter {text-align: center;}
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-	
-</style>
-
-<!-- This is where the CSS stops and JS starts -->
-
+</body>
+</html>
 
 <script>
 function openNav() {
