--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3XEB6WG77X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3XEB6WG77X');
+</script>
  <link rel="stylesheet" href="Styles.css">
  <title>Meeting Plans</title>
  <style>
