--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -142,7 +142,7 @@ text-align: left;
   </tr>
    <tr>
     <td>01/23/2025</td>
-    <td>>Map and compass skills leading up to Orienteering Merit Badge</td>
+    <td>Map and compass skills leading up to Orienteering Merit Badge</td>
     <td>7:00 PM - 8:30 PM</td>
   </tr>
   <tr>
