--- a/Menu/Meeting_Plans.html
+++ b/Menu/Meeting_Plans.html
@@ -125,7 +125,39 @@ text-align: left;
 -->
 <!-- paste template here -->
 
+<h3>February 2025</h3>
+<h4>Theme: Winter Sports</h4>
+ 
+<table>
+  <tr>
+    <th>Date</th>
+    <th>Description</th>
+    <th>Time</th>
+  </tr>
+   <tr>
+    <td>01/23/2025</td>
+    <td>PLC (Patrol Leader's Conference) Leadership attending only</td>
+    <td>7:00 PM - 8:00 PM</td>
+  </tr>
+   <tr>
+    <td>01/20/2025</td>
+    <td>To be decided</td>
+    <td>7:00 PM - 8:30 PM</td>
+  </tr>
+  <tr>
+    <td>01/13/2025</td>
+    <td>To be decided</td>
+    <td>7:00 PM - 8:30 PM</td>
+  </tr>
+  <tr>
+    <td>01/06/2025</td>
+    <td>To be decided</td>
+    <td>7:00 PM - 8:30 PM</td>
+  </tr>
 
+</table>
+
+<hr>
 
 <h3>JANUARY 2025</h3>
 
