--- a/Menu/Trips/prevNfutrPlans.html
+++ b/Menu/Trips/prevNfutrPlans.html
@@ -87,15 +87,39 @@ text-align: left;
   <th>Date</th>
   <th>Location</th>
   <th>Description</th>
+  <th>Links (If applicable)</th>
 </tr>
 <!-- Paste template here -->
 
 
  
  <tr>
+  <td>Info Pending</td>
+  <td>Winter Place, West Virginia</td>
+  <td>Winter Skii/Snowboarding trip. Deadline to register is Feb 18, please sign up individually</td>
+  <td>
+  Sign up Link: <a href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://www.centralncscouting.org/winterplace%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1737149325796415%26amp;usg%3DAOvVaw3v4UepofRa_hsc2-jeP3SN&sa=D&source=docs&ust=1737149325802352&usg=AOvVaw3grYsO6J3ZuppRRKzsps0X">HERE >></a>
+  </td>
+  <td></td>
+</tr>
+ 
+ <tr>
+  <td>02/15/2025</td>
+  <td>Stuart Heights Baptist Church on Hixon Pike</td>
+  <td>Ryan Kozlika’s Eagle Court of Honor!  Scouts arrive at 11:45 AM, will end ~ 2:PM. PLEASE PLAN TO ATTEND, AND WEAR YOUR CLASS A UNIFORM. Great job Ryan! You've earned it!</td>
+</tr>
+ 
+ <tr>
+  <td>02/08/2025</td>
+  <td>University of Scouting</td>
+  <td>This is primarily adult leader training although there are some courses for youth.</td>  
+  <td>Sign up here: <a href="https://scoutingevent.com/556-UofS">HERE >></a></td>
+</tr>
+ 
+ <tr>
   <td>01/24-26/2025</td>
   <td>Skymont Scout Camp</td>
-  <td>A trip to Skymont where Scouts and guests will stay in Scout lodge, with a Patrol cook-off later on. Go Big Ponies! (and rest of Troop 223 and 1223, of course!:>)</td>
+  <td>A trip to Skymont where Scouts and guests will stay in Scout lodge, with a Patrol cook-off later on. Go Big Ponies! (and rest of Troop 223 and 1223, of course!:>) Ps: Any Webelos or Arrow of Light Cub Scouts welcome; if comming they will stay with a Parent in Lodge's Private bunk rooms</td>
 </tr>
   <tr>
   <td>01/23/2025</td>
@@ -111,6 +135,12 @@ text-align: left;
   <td>01/16/2025</td>
   <td>To be decided</td>
   <td>Potential date of five mile hike for orienteering Merit badge</td>
+</tr>
+  <tr>
+  <td>01/11/2025</td>
+  <td>Merit Badge College</td>
+  <td>This is a place where you can earn a few Merit badges</td>
+  <td>Info: <a href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://www.nwgabsa.org/content/124394/Etowah-District-Merit-Badge-College--Merit-Badge-College---Etowah%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1737149325798087%26amp;usg%3DAOvVaw1hw1LTPt-5rIwZ7kRGGOKd&sa=D&source=docs&ust=1737149325803356&usg=AOvVaw04NRE0pR5smU4APqK7kfBN">HERE >></a></td>
 </tr>
  <tr>
   <td>01/11/2025</td>
