--- a/index.html
+++ b/index.html
@@ -423,19 +423,13 @@ By <em> - Zephyr Carter.</em>
 <a href="mailto:gomocs73@gmail.com">gomocs73@gmail.com</a>
   <br>
   you can also reach our Scoutmaster at:
+  <br>
    423-355-4430
     </div>
-<p>
 	
-  NOTE: our Scoutmaster does not directly control this site, so for any questions or comments please Email: 
+  NOTE: our Scoutmaster does not directly control this site, so for any questions please Email: 
   <br>
-<a href="mailto:Bsa-223@protonmail.com">Bsa-223@protonmail.com </a>
-<br> And for any general questions about the Troop please Email:
-<br>
-<a href="mailto:gomocs73@gmail.com">gomocs73@gmail.com</a>
-  <br>
-Or call:  423-355-4430
-  </p>
+  <a href="mailto:Bsa-223@protonmail.com">Bsa-223@protonmail.com</a> 
   </h6>
     </div>
   </div>
